# serializer version: 1
# name: test_ag_distribution_services[municipality-None-False]
  set({
    'my-subservice',
  })
# ---
# name: test_ag_distribution_services[municipality-None-True]
  set({
    'aew',
    'afb',
    'agv-bs',
    'agv-esp',
    'amb',
    'axpo',
    'bks-dp',
    'bks-ka',
    'dgs-avs-lmi',
    'dgs-avs-vet',
    'dvi-awa-iga',
    'gvm',
    'my-subservice',
    'some-municipality',
  })
# ---
# name: test_ag_distribution_services[municipality-light-None-False]
  set({
    'afb',
    'my-subservice',
  })
# ---
# name: test_ag_distribution_services[municipality-light-None-True]
  set({
    'afb',
    'my-subservice',
  })
# ---
# name: test_ag_distribution_services[service-afb-None-False]
  set({
    'aew',
    'agv-bs',
    'agv-esp',
    'alg-wb',
    'amb',
    'atb-em',
    'atb-ivs',
    'atb-le',
    'atb-re',
    'atb-vm',
    'axpo',
    'bks-dp',
    'bks-ka',
    'dgs-avs-lmi',
    'dgs-avs-vet',
    'dvi-awa-iga',
    'gvm',
    'my-subservice',
    'some-cantonal-service',
    'some-municipality',
  })
# ---
# name: test_ag_distribution_services[service-afb-None-True]
  set({
    'aew',
    'agv-bs',
    'agv-esp',
    'alg-wb',
    'amb',
    'atb-em',
    'atb-ivs',
    'atb-le',
    'atb-re',
    'atb-vm',
    'axpo',
    'bks-dp',
    'bks-ka',
    'dgs-avs-lmi',
    'dgs-avs-vet',
    'dvi-awa-iga',
    'gvm',
    'my-subservice',
    'some-cantonal-service',
    'some-municipality',
  })
# ---
# name: test_ag_distribution_services[service-cantonal-None-False]
  set({
    'my-subservice',
  })
# ---
# name: test_ag_distribution_services[service-cantonal-None-True]
  set({
    'aew',
    'afb',
    'agv-bs',
    'agv-esp',
    'amb',
    'axpo',
    'bks-dp',
    'bks-ka',
    'dgs-avs-lmi',
    'dgs-avs-vet',
    'dvi-awa-iga',
    'gvm',
    'my-subservice',
    'some-municipality',
  })
# ---
# name: test_ag_distribution_services[service-cantonal-alg-gn-False]
  set({
    'alg-wb',
    'my-subservice',
  })
# ---
# name: test_ag_distribution_services[service-cantonal-alg-gn-True]
  set({
    'aew',
    'afb',
    'agv-bs',
    'agv-esp',
    'amb',
    'axpo',
    'bks-dp',
    'bks-ka',
    'dgs-avs-lmi',
    'dgs-avs-vet',
    'dvi-awa-iga',
    'gvm',
    'my-subservice',
    'some-municipality',
  })
# ---
# name: test_ag_distribution_services[service-cantonal-atb-False]
  set({
    'atb-em',
    'atb-ivs',
    'atb-le',
    'atb-re',
    'atb-vm',
    'my-subservice',
  })
# ---
# name: test_ag_distribution_services[service-cantonal-atb-True]
  set({
    'aew',
    'afb',
    'agv-bs',
    'agv-esp',
    'amb',
    'axpo',
    'bks-dp',
    'bks-ka',
    'dgs-avs-lmi',
    'dgs-avs-vet',
    'dvi-awa-iga',
    'gvm',
    'my-subservice',
    'some-municipality',
  })
# ---
